[gd_scene load_steps=3 format=3 uid="uid://consoledev123"]

[ext_resource type="Script" uid="uid://cb3tcirniiidb" path="res://scripts/ui/DebugConsole.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_console_bg"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.6, 0.8, 1)
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="DebugConsole" type="CanvasLayer"]
layer = 100
script = ExtResource("1")

[node name="ConsolePanel" type="Panel" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 400.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_console_bg")

[node name="VBoxContainer" type="VBoxContainer" parent="ConsolePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="TitleBar" type="HBoxContainer" parent="ConsolePanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="ConsolePanel/VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.3, 0.8, 1, 1)
theme_override_font_sizes/font_size = 18
text = "â–¼ Debug Console"

[node name="CloseHint" type="Label" parent="ConsolePanel/VBoxContainer/TitleBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "[~ or ESC to close]"

[node name="HSeparator" type="HSeparator" parent="ConsolePanel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="ConsolePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
scroll_deadzone = 16

[node name="OutputLabel" type="RichTextLabel" parent="ConsolePanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[color=yellow]Console Ready[/color]
"
fit_content = true
scroll_following = true

[node name="InputField" type="LineEdit" parent="ConsolePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/caret_color = Color(0, 1, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
placeholder_text = "Enter command... (type 'help' for commands)"
caret_blink = true
